--- a/package.json
+++ b/package.json
@@ -2,26 +2,45 @@
   "name": "ui-kit-article",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.cjs",
+  "module": "lib/index.js",
+  "typings": "lib/index.d.ts",
+  "style": "lib/index.css",
+  "files": [
+    "lib"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -rf lib",
+    "build": "npm run clean && rollup -c --bundleConfigAsCjs",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "ui-kit",
+    "react",
+    "rollup"
+  ],
+  "author": "Danil Golovin <destpb@gmail.com>",
   "license": "ISC",
   "peerDependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^29.0.0",
+    "@rollup/plugin-node-resolve": "^16.0.3",
+    "@rollup/plugin-typescript": "^12.3.0",
+    "@storybook/react": "^10.0.2",
     "@storybook/react-vite": "^10.0.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "postcss": "^8.5.6",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "storybook": "^10.0.2"
+    "rollup": "^4.52.5",
+    "rollup-plugin-postcss": "^4.0.2",
+    "storybook": "^10.0.2",
+    "typescript": "^5.9.3"
   }
 }
