--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "clean": "rm -rf lib",
     "build": "npm run clean && rollup -c --bundleConfigAsCjs",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "lint": "eslint"
   },
   "keywords": [
     "ui-kit",
@@ -27,6 +28,7 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.0",
     "@rollup/plugin-commonjs": "^29.0.0",
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-typescript": "^12.3.0",
@@ -34,6 +36,10 @@
     "@storybook/react-vite": "^10.0.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "eslint": "^9.39.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.5.0",
+    "jiti": "^2.6.1",
     "postcss": "^8.5.6",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
@@ -41,6 +47,7 @@
     "rollup": "^4.52.5",
     "rollup-plugin-postcss": "^4.0.2",
     "storybook": "^10.0.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.2"
   }
 }
