--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "lint": "eslint",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "test": "jest"
   },
   "keywords": [
     "ui-kit",
@@ -29,17 +30,28 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
     "@eslint/js": "^9.39.0",
     "@rollup/plugin-commonjs": "^29.0.0",
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-typescript": "^12.3.0",
     "@storybook/react": "^10.0.2",
     "@storybook/react-vite": "^10.0.2",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "eslint": "^9.39.0",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.5.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "jiti": "^2.6.1",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
@@ -49,6 +61,7 @@
     "rollup": "^4.52.5",
     "rollup-plugin-postcss": "^4.0.2",
     "storybook": "^10.0.2",
+    "ts-jest": "^29.4.5",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.2"
   }
